# QMorseApp

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml  qmorse.cpp  qmorse.h
